--- a/matching/data_overview.ipynb
+++ b/matching/data_overview.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -212,10 +212,230 @@
      "output_type": "stream",
      "text": [
       "/local/home/ekoller/BT\n",
+      "Jupyter environment detected. Enabling Open3D WebVisualizer.\n",
+      "[Open3D INFO] WebRTC GUI backend enabled.\n",
+      "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "[ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24\n",
       " 25 26 27 28 29 30 31]\n",
-      "[-1.9041884 -2.576559  -0.0347726]\n",
-      "[]\n"
+      "{1.0: array([ 0.48778215, -2.2227864 , -1.311532  ], dtype=float32), 2.0: array([-0.8165765 , -3.03687   , -0.78502166], dtype=float32), 3.0: array([-1.1759152 , -3.328752  ,  0.17441119], dtype=float32), 4.0: array([-0.533804  , -4.0798655 , -0.54956096], dtype=float32), 5.0: array([-2.0876634, -2.4069846, -0.0249024], dtype=float32), 6.0: array([-1.980719  , -2.4873707 , -0.05275032], dtype=float32), 7.0: array([-1.7865872 , -2.677355  , -0.23320776], dtype=float32), 8.0: array([-1.9496969 , -1.5317907 ,  0.31452855], dtype=float32), 9.0: array([-1.7468864 , -1.7880152 , -0.75204885], dtype=float32), 10.0: array([-0.96203333, -0.70390165, -0.38595074], dtype=float32), 11.0: array([-0.7046183 ,  0.28687426, -0.13205197], dtype=float32), 12.0: array([ 0.9887152 , -0.16144633, -0.15079159], dtype=float32), 13.0: array([-0.04639634, -2.464168  , -0.7877557 ], dtype=float32), 14.0: array([ 0.5106742, -2.3859088, -0.7937273], dtype=float32), 15.0: array([ 0.1629061 , -1.9243655 , -0.77996236], dtype=float32), 16.0: array([ 0.38057673, -0.02221171,  0.476318  ], dtype=float32), 17.0: array([ 0.74850816, -0.6818074 , -1.0362723 ], dtype=float32), 18.0: array([ 0.59561014, -0.32606313, -0.50473326], dtype=float32), 19.0: array([-0.427282  , -3.4276395 , -0.67453873], dtype=float32), 20.0: array([-1.1302081 , -2.7152905 , -0.69557446], dtype=float32), 21.0: array([-1.761868 , -1.6531892, -0.3081688], dtype=float32), 22.0: array([-2.063788  , -1.7975601 , -0.33647466], dtype=float32), 23.0: array([ 0.00659043,  0.4805301 , -0.59169465], dtype=float32), 24.0: array([-0.96971226, -0.14635603, -0.4177313 ], dtype=float32), 25.0: array([-0.5006001 ,  0.22403847, -0.38650146], dtype=float32), 26.0: array([ 1.0345021 , -0.58405805, -0.42964777], dtype=float32), 27.0: array([ 0.8280948 , -0.808531  , -0.62063164], dtype=float32), 28.0: array([ 1.5164818 , -1.0904242 ,  0.35160646], dtype=float32), 29.0: array([ 1.8788158 , -1.6249266 , -0.60427916], dtype=float32), 30.0: array([-0.5718624, -3.9897876,  0.2278554], dtype=float32), 31.0: array([-1.9041884, -2.576559 , -0.0347726], dtype=float32)}\n",
+      "{1.0: array([[ 2.67     ,  0.0270674, -1.41     ],\n",
+      "       [-2.25     ,  0.0270674, -1.41     ],\n",
+      "       [-2.25     , -4.21     , -1.41     ],\n",
+      "       [ 2.67     , -4.21     , -1.41     ],\n",
+      "       [ 2.67     ,  0.0270674, -1.15     ],\n",
+      "       [-2.25     ,  0.0270674, -1.15     ],\n",
+      "       [-2.25     , -4.21     , -1.15     ],\n",
+      "       [ 2.67     , -4.21     , -1.15     ]], dtype=float32), 2.0: array([[ 0.0251564, -2.2632   , -1.32338  ],\n",
+      "       [-1.61     , -2.2632   , -1.32338  ],\n",
+      "       [-1.61     , -3.95     , -1.32338  ],\n",
+      "       [ 0.0251564, -3.95     , -1.32338  ],\n",
+      "       [ 0.0251564, -2.2632   , -0.33     ],\n",
+      "       [-1.61     , -2.2632   , -0.33     ],\n",
+      "       [-1.61     , -3.95     , -0.33     ],\n",
+      "       [ 0.0251564, -3.95     , -0.33     ]], dtype=float32), 3.0: array([[-0.526498, -2.73805 , -1.31719 ],\n",
+      "       [-1.71    , -2.73805 , -1.31719 ],\n",
+      "       [-1.71    , -3.95    , -1.31719 ],\n",
+      "       [-0.526498, -3.95    , -1.31719 ],\n",
+      "       [-0.526498, -2.73805 ,  1.19914 ],\n",
+      "       [-1.71    , -2.73805 ,  1.19914 ],\n",
+      "       [-1.71    , -3.95    ,  1.19914 ],\n",
+      "       [-0.526498, -3.95    ,  1.19914 ]], dtype=float32), 4.0: array([[-0.37    , -3.77    , -1.34463 ],\n",
+      "       [-0.652227, -3.77    , -1.34463 ],\n",
+      "       [-0.652227, -4.33    , -1.34463 ],\n",
+      "       [-0.37    , -4.33    , -1.34463 ],\n",
+      "       [-0.37    , -3.77    ,  0.73    ],\n",
+      "       [-0.652227, -3.77    ,  0.73    ],\n",
+      "       [-0.652227, -4.33    ,  0.73    ],\n",
+      "       [-0.37    , -4.33    ,  0.73    ]], dtype=float32), 5.0: array([[-1.55805, -2.01   , -1.35   ],\n",
+      "       [-2.48943, -2.01   , -1.35   ],\n",
+      "       [-2.48943, -2.87   , -1.35   ],\n",
+      "       [-1.55805, -2.87   , -1.35   ],\n",
+      "       [-1.55805, -2.01   ,  1.15   ],\n",
+      "       [-2.48943, -2.01   ,  1.15   ],\n",
+      "       [-2.48943, -2.87   ,  1.15   ],\n",
+      "       [-1.55805, -2.87   ,  1.15   ]], dtype=float32), 6.0: array([[-1.86362, -2.37   , -0.51   ],\n",
+      "       [-2.13836, -2.37   , -0.51   ],\n",
+      "       [-2.13836, -2.63   , -0.51   ],\n",
+      "       [-1.86362, -2.63   , -0.51   ],\n",
+      "       [-1.86362, -2.37   ,  0.35   ],\n",
+      "       [-2.13836, -2.37   ,  0.35   ],\n",
+      "       [-2.13836, -2.63   ,  0.35   ],\n",
+      "       [-1.86362, -2.63   ,  0.35   ]], dtype=float32), 7.0: array([[-1.69671 , -2.54197 , -0.660482],\n",
+      "       [-1.95    , -2.54197 , -0.660482],\n",
+      "       [-1.95    , -2.79    , -0.660482],\n",
+      "       [-1.69671 , -2.79    , -0.660482],\n",
+      "       [-1.69671 , -2.54197 ,  0.153859],\n",
+      "       [-1.95    , -2.54197 ,  0.153859],\n",
+      "       [-1.95    , -2.79    ,  0.153859],\n",
+      "       [-1.69671 , -2.79    ,  0.153859]], dtype=float32), 8.0: array([[-1.30976, -0.93   , -1.36643],\n",
+      "       [-2.53   , -0.93   , -1.36643],\n",
+      "       [-2.53   , -2.07   , -1.36643],\n",
+      "       [-1.30976, -2.07   , -1.36643],\n",
+      "       [-1.30976, -0.93   ,  1.51   ],\n",
+      "       [-2.53   , -0.93   ,  1.51   ],\n",
+      "       [-2.53   , -2.07   ,  1.51   ],\n",
+      "       [-1.30976, -2.07   ,  1.51   ]], dtype=float32), 9.0: array([[-1.29317 , -1.23    , -1.35222 ],\n",
+      "       [-2.21281 , -1.23    , -1.35222 ],\n",
+      "       [-2.21281 , -2.17    , -1.35222 ],\n",
+      "       [-1.29317 , -2.17    , -1.35222 ],\n",
+      "       [-1.29317 , -1.23    , -0.282809],\n",
+      "       [-2.21281 , -1.23    , -0.282809],\n",
+      "       [-2.21281 , -2.17    , -0.282809],\n",
+      "       [-1.29317 , -2.17    , -0.282809]], dtype=float32), 10.0: array([[-0.25     , -0.0314738, -1.29     ],\n",
+      "       [-1.43     , -0.0314738, -1.29     ],\n",
+      "       [-1.43     , -1.07493  , -1.29     ],\n",
+      "       [-0.25     , -1.07493  , -1.29     ],\n",
+      "       [-0.25     , -0.0314738,  0.87     ],\n",
+      "       [-1.43     , -0.0314738,  0.87     ],\n",
+      "       [-1.43     , -1.07493  ,  0.87     ],\n",
+      "       [-0.25     , -1.07493  ,  0.87     ]], dtype=float32), 11.0: array([[-0.00646886,  0.946741  , -0.49      ],\n",
+      "       [-1.24338   ,  0.946741  , -0.49      ],\n",
+      "       [-1.24338   , -0.27      , -0.49      ],\n",
+      "       [-0.00646886, -0.27      , -0.49      ],\n",
+      "       [-0.00646886,  0.946741  ,  0.133931  ],\n",
+      "       [-1.24338   ,  0.946741  ,  0.133931  ],\n",
+      "       [-1.24338   , -0.27      ,  0.133931  ],\n",
+      "       [-0.00646886, -0.27      ,  0.133931  ]], dtype=float32), 12.0: array([[ 1.98115 ,  0.946741, -0.63    ],\n",
+      "       [-0.07    ,  0.946741, -0.63    ],\n",
+      "       [-0.07    , -1.19    , -0.63    ],\n",
+      "       [ 1.98115 , -1.19    , -0.63    ],\n",
+      "       [ 1.98115 ,  0.946741,  0.31    ],\n",
+      "       [-0.07    ,  0.946741,  0.31    ],\n",
+      "       [-0.07    , -1.19    ,  0.31    ],\n",
+      "       [ 1.98115 , -1.19    ,  0.31    ]], dtype=float32), 13.0: array([[ 0.752113, -1.59    , -1.32443 ],\n",
+      "       [-0.916739, -1.59    , -1.32443 ],\n",
+      "       [-0.916739, -3.30376 , -1.32443 ],\n",
+      "       [ 0.752113, -3.30376 , -1.32443 ],\n",
+      "       [ 0.752113, -1.59    , -0.500922],\n",
+      "       [-0.916739, -1.59    , -0.500922],\n",
+      "       [-0.916739, -3.30376 , -0.500922],\n",
+      "       [ 0.752113, -3.30376 , -0.500922]], dtype=float32), 14.0: array([[ 0.83517  , -2.08636  , -1.33403  ],\n",
+      "       [ 0.0856009, -2.08636  , -1.33403  ],\n",
+      "       [ 0.0856009, -2.79871  , -1.33403  ],\n",
+      "       [ 0.83517  , -2.79871  , -1.33403  ],\n",
+      "       [ 0.83517  , -2.08636  , -0.320418 ],\n",
+      "       [ 0.0856009, -2.08636  , -0.320418 ],\n",
+      "       [ 0.0856009, -2.79871  , -0.320418 ],\n",
+      "       [ 0.83517  , -2.79871  , -0.320418 ]], dtype=float32), 15.0: array([[ 0.431946, -1.62821 , -1.31    ],\n",
+      "       [-0.293365, -1.62821 , -1.31    ],\n",
+      "       [-0.293365, -2.25    , -1.31    ],\n",
+      "       [ 0.431946, -2.25    , -1.31    ],\n",
+      "       [ 0.431946, -1.62821 , -0.31551 ],\n",
+      "       [-0.293365, -1.62821 , -0.31551 ],\n",
+      "       [-0.293365, -2.25    , -0.31551 ],\n",
+      "       [ 0.431946, -2.25    , -0.31551 ]], dtype=float32), 16.0: array([[ 1.05     ,  0.925414 ,  0.0980581],\n",
+      "       [-1.09     ,  0.925414 ,  0.0980581],\n",
+      "       [-1.09     , -0.505207 ,  0.0980581],\n",
+      "       [ 1.05     , -0.505207 ,  0.0980581],\n",
+      "       [ 1.05     ,  0.925414 ,  1.11305  ],\n",
+      "       [-1.09     ,  0.925414 ,  1.11305  ],\n",
+      "       [-1.09     , -0.505207 ,  1.11305  ],\n",
+      "       [ 1.05     , -0.505207 ,  1.11305  ]], dtype=float32), 17.0: array([[ 1.55    ,  0.416181, -1.3426  ],\n",
+      "       [-0.867532,  0.416181, -1.3426  ],\n",
+      "       [-0.867532, -1.44604 , -1.3426  ],\n",
+      "       [ 1.55    , -1.44604 , -1.3426  ],\n",
+      "       [ 1.55    ,  0.416181, -0.42139 ],\n",
+      "       [-0.867532,  0.416181, -0.42139 ],\n",
+      "       [-0.867532, -1.44604 , -0.42139 ],\n",
+      "       [ 1.55    , -1.44604 , -0.42139 ]], dtype=float32), 18.0: array([[ 1.97346 ,  0.885675, -0.852522],\n",
+      "       [-1.24338 ,  0.885675, -0.852522],\n",
+      "       [-1.24338 , -1.48108 , -0.852522],\n",
+      "       [ 1.97346 , -1.48108 , -0.852522],\n",
+      "       [ 1.97346 ,  0.885675,  0.73    ],\n",
+      "       [-1.24338 ,  0.885675,  0.73    ],\n",
+      "       [-1.24338 , -1.48108 ,  0.73    ],\n",
+      "       [ 1.97346 , -1.48108 ,  0.73    ]], dtype=float32), 19.0: array([[-0.0583483, -3.28378  , -0.87     ],\n",
+      "       [-0.737999 , -3.28378  , -0.87     ],\n",
+      "       [-0.737999 , -3.55     , -0.87     ],\n",
+      "       [-0.0583483, -3.55     , -0.87     ],\n",
+      "       [-0.0583483, -3.28378  , -0.543918 ],\n",
+      "       [-0.737999 , -3.28378  , -0.543918 ],\n",
+      "       [-0.737999 , -3.55     , -0.543918 ],\n",
+      "       [-0.0583483, -3.55     , -0.543918 ]], dtype=float32), 20.0: array([[-0.97    , -2.5484  , -0.85    ],\n",
+      "       [-1.29    , -2.5484  , -0.85    ],\n",
+      "       [-1.29    , -2.89    , -0.85    ],\n",
+      "       [-0.97    , -2.89    , -0.85    ],\n",
+      "       [-0.97    , -2.5484  , -0.568394],\n",
+      "       [-1.29    , -2.5484  , -0.568394],\n",
+      "       [-1.29    , -2.89    , -0.568394],\n",
+      "       [-0.97    , -2.89    , -0.568394]], dtype=float32), 21.0: array([[-1.6692  , -1.57    , -0.39    ],\n",
+      "       [-1.93    , -1.57    , -0.39    ],\n",
+      "       [-1.93    , -1.73902 , -0.39    ],\n",
+      "       [-1.6692  , -1.73902 , -0.39    ],\n",
+      "       [-1.6692  , -1.57    , -0.267528],\n",
+      "       [-1.93    , -1.57    , -0.267528],\n",
+      "       [-1.93    , -1.73902 , -0.267528],\n",
+      "       [-1.6692  , -1.73902 , -0.267528]], dtype=float32), 22.0: array([[-1.92139, -1.59   , -0.43   ],\n",
+      "       [-2.29   , -1.59   , -0.43   ],\n",
+      "       [-2.29   , -1.9133 , -0.43   ],\n",
+      "       [-1.92139, -1.9133 , -0.43   ],\n",
+      "       [-1.92139, -1.59   , -0.23   ],\n",
+      "       [-2.29   , -1.59   , -0.23   ],\n",
+      "       [-2.29   , -1.9133 , -0.23   ],\n",
+      "       [-1.92139, -1.9133 , -0.23   ]], dtype=float32), 23.0: array([[ 0.39    ,  0.820263, -0.79    ],\n",
+      "       [-0.37    ,  0.820263, -0.79    ],\n",
+      "       [-0.37    ,  0.13    , -0.79    ],\n",
+      "       [ 0.39    ,  0.13    , -0.79    ],\n",
+      "       [ 0.39    ,  0.820263, -0.406845],\n",
+      "       [-0.37    ,  0.820263, -0.406845],\n",
+      "       [-0.37    ,  0.13    , -0.406845],\n",
+      "       [ 0.39    ,  0.13    , -0.406845]], dtype=float32), 24.0: array([[-0.775871 ,  0.0747815, -0.53     ],\n",
+      "       [-1.15     ,  0.0747815, -0.53     ],\n",
+      "       [-1.15     , -0.310485 , -0.53     ],\n",
+      "       [-0.775871 , -0.310485 , -0.53     ],\n",
+      "       [-0.775871 ,  0.0747815, -0.361036 ],\n",
+      "       [-1.15     ,  0.0747815, -0.361036 ],\n",
+      "       [-1.15     , -0.310485 , -0.361036 ],\n",
+      "       [-0.775871 , -0.310485 , -0.361036 ]], dtype=float32), 25.0: array([[-0.35     ,  0.41     , -0.51     ],\n",
+      "       [-0.63     ,  0.41     , -0.51     ],\n",
+      "       [-0.63     , -0.0208152, -0.51     ],\n",
+      "       [-0.35     , -0.0208152, -0.51     ],\n",
+      "       [-0.35     ,  0.41     , -0.319153 ],\n",
+      "       [-0.63     ,  0.41     , -0.319153 ],\n",
+      "       [-0.63     , -0.0208152, -0.319153 ],\n",
+      "       [-0.35     , -0.0208152, -0.319153 ]], dtype=float32), 26.0: array([[ 1.4951  , -0.35    , -0.57    ],\n",
+      "       [ 0.568311, -0.35    , -0.57    ],\n",
+      "       [ 0.568311, -0.934901, -0.57    ],\n",
+      "       [ 1.4951  , -0.934901, -0.57    ],\n",
+      "       [ 1.4951  , -0.35    , -0.264139],\n",
+      "       [ 0.568311, -0.35    , -0.264139],\n",
+      "       [ 0.568311, -0.934901, -0.264139],\n",
+      "       [ 1.4951  , -0.934901, -0.264139]], dtype=float32), 27.0: array([[ 1.03    , -0.57    , -0.73    ],\n",
+      "       [ 0.58633 , -0.57    , -0.73    ],\n",
+      "       [ 0.58633 , -1.00074 , -0.73    ],\n",
+      "       [ 1.03    , -1.00074 , -0.73    ],\n",
+      "       [ 1.03    , -0.57    , -0.416909],\n",
+      "       [ 0.58633 , -0.57    , -0.416909],\n",
+      "       [ 0.58633 , -1.00074 , -0.416909],\n",
+      "       [ 1.03    , -1.00074 , -0.416909]], dtype=float32), 28.0: array([[ 1.7592 , -0.67   ,  0.11   ],\n",
+      "       [ 1.23   , -0.67   ,  0.11   ],\n",
+      "       [ 1.23   , -1.30266,  0.11   ],\n",
+      "       [ 1.7592 , -1.30266,  0.11   ],\n",
+      "       [ 1.7592 , -0.67   ,  0.61   ],\n",
+      "       [ 1.23   , -0.67   ,  0.61   ],\n",
+      "       [ 1.23   , -1.30266,  0.61   ],\n",
+      "       [ 1.7592 , -1.30266,  0.61   ]], dtype=float32), 29.0: array([[ 2.09   , -1.15   , -1.33609],\n",
+      "       [ 1.50883, -1.15   , -1.33609],\n",
+      "       [ 1.50883, -1.91   , -1.33609],\n",
+      "       [ 2.09   , -1.91   , -1.33609],\n",
+      "       [ 2.09   , -1.15   ,  0.51982],\n",
+      "       [ 1.50883, -1.15   ,  0.51982],\n",
+      "       [ 1.50883, -1.91   ,  0.51982],\n",
+      "       [ 2.09   , -1.91   ,  0.51982]], dtype=float32), 30.0: array([[-0.401453, -3.83    , -0.29    ],\n",
+      "       [-0.67202 , -3.83    , -0.29    ],\n",
+      "       [-0.67202 , -4.17    , -0.29    ],\n",
+      "       [-0.401453, -4.17    , -0.29    ],\n",
+      "       [-0.401453, -3.83    ,  0.872555],\n",
+      "       [-0.67202 , -3.83    ,  0.872555],\n",
+      "       [-0.67202 , -4.17    ,  0.872555],\n",
+      "       [-0.401453, -4.17    ,  0.872555]], dtype=float32), 31.0: array([[-1.85   , -2.52383, -0.37   ],\n",
+      "       [-1.99081, -2.52383, -0.37   ],\n",
+      "       [-1.99081, -2.67   , -0.37   ],\n",
+      "       [-1.85   , -2.67   , -0.37   ],\n",
+      "       [-1.85   , -2.52383,  0.21   ],\n",
+      "       [-1.99081, -2.52383,  0.21   ],\n",
+      "       [-1.99081, -2.67   ,  0.21   ],\n",
+      "       [-1.85   , -2.67   ,  0.21   ]], dtype=float32)}\n"
      ]
     }
    ],
@@ -265,6 +485,66 @@
     "print(gt_centers)\n",
     "print(gt_boxes)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matching data {'1': 14, '2': 1, '3': 29, '4': 29, '5': 4, '6': 1}\n",
+      "No object is mapped to ID 0.\n"
+     ]
+    }
+   ],
+   "source": [
+    "  #return an object with the structure:scan_id: frame_number: frame_obj_id: matched id\n",
+    "import os\n",
+    "import h5py\n",
+    "import os.path as osp\n",
+    "def check_for_id_zero(matching_data):\n",
+    "    # Iterate through each frame in the matching data\n",
+    "    for frame_idx, matches in matching_data.items():\n",
+    "        # Check if any object is mapped to 0 in this frame\n",
+    "        for obj_id, mapped_id in matches.items():\n",
+    "            if mapped_id == 0:\n",
+    "                print(f\"Object ID {obj_id} in frame {frame_idx} is mapped to ID 0.\")\n",
+    "                return True  # If found, exit early\n",
+    "\n",
+    "    print(\"No object is mapped to ID 0.\")\n",
+    "    return False\n",
+    "\n",
+    "def read_matching_data( scan_id):\n",
+    "    # get the file and iterate through everything to create an object\n",
+    "    matchfile = osp.join(\"/media/ekoller/T7/Predicted_Matches\", scan_id + \".h5\")\n",
+    "    with h5py.File(matchfile, 'r') as hdf_file:\n",
+    "        loaded_matches = {}\n",
+    "        \n",
+    "        # Iterate through frame indices\n",
+    "        for frame_idx in hdf_file.keys():\n",
+    "            matches = {}\n",
+    "            \n",
+    "            # Access the group for each frame index\n",
+    "            frame_group = hdf_file[frame_idx]\n",
+    "            \n",
+    "            # Load the frame_id -> obj mappings\n",
+    "            for frame_id in frame_group.keys():\n",
+    "                obj = frame_group[frame_id][()]\n",
+    "                matches[frame_id] = int(obj)  # Convert back to int\n",
+    "            \n",
+    "            loaded_matches[frame_idx] = matches \n",
+    "\n",
+    "    return loaded_matches\n",
+    "\n",
+    "\n",
+    "matching_data = read_matching_data(\"fcf66d8a-622d-291c-8429-0e1109c6bb26\")\n",
+    "print(\"matching data\", matching_data[\"000000\"])\n",
+    "found_id_zero = check_for_id_zero(matching_data)\n",
     "\n"
    ]
   }
